Fixed some funtionality, preventing some errors, added table re-sizing on mobile.

--- a/react/components/AssemblyPartsSystem/AssemblyParts/AssemblyParts.css
+++ b/react/components/AssemblyPartsSystem/AssemblyParts/AssemblyParts.css
@@ -23,3 +23,13 @@
   background-color: grey;
   color: white;
 }
+
+/* @media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+  .parts-table td,
+  .parts-table th {
+    border: 1px solid #ddd;
+    padding-left: 50%
+  }
+} */
